Added Search Results Page

--- a/films-tube/src/scss/movie.scss
+++ b/films-tube/src/scss/movie.scss
@@ -5,8 +5,12 @@
       text-align: center;
     }
     .movie-p {
+      text-align: center;
       img {
         width: 100%;
+      }
+      img:hover {
+        width: 90%;
       }
     }
  }
